--- a/responsive.css
+++ b/responsive.css
@@ -188,6 +188,7 @@ lg- >1200px
      .container {
          width: 35.5rem;
          height: 100%;
+         height: 100vh;
      }
    
      .slider-box {
