--- a/responsive.css
+++ b/responsive.css
@@ -188,13 +188,15 @@ lg- >1200px
      .container {
          width: 35.5rem;
          height: 100%;
-         height: 100vh;
+         
      }
    
      .slider-box {
          width: 35.5rem;
          height: 100vh;
      }
+
+     .slider-box .container { height: 100%;}
 
      .slider-img, .slider-effect {
          width: 35.5rem;
