--- a/style.css
+++ b/style.css
@@ -103,7 +103,10 @@ body{
 
  .slider-box {
      width: 100%;
+     height: 100vh;
  }
+
+ .slider-box .container {height: 100%;}
 
 .slider-img {
     height: 100vh;
