--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ body{
 
 .slider-img {
     height: 100vh;
-    background-image: url(/project.images/intro-bg.jpg);
+    background-image: url(project.images/intro-bg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
  background-position: center center;
