--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ body{
 
 .slider-img {
     height: 100vh;
-    background-image: url(project.images/intro-bg.jpg);
+    background-image: url(/project.images/intro-bg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
  background-position: center center;
@@ -334,7 +334,8 @@ font-size: medium;
 .block-button  :hover{
     background-color: black;
     color: white;
-    transition: background-color 1s ease;
+    transition: all 1s ease;
+     
 }
 
 /* portfolio section style*/
