--- a/responsive.css
+++ b/responsive.css
@@ -180,26 +180,30 @@ lg- >1200px
         font-size: 15px;
     }
    
+section {
+    width: 39rem;
+}
+
      .box {
-         height: 75px;
-         width: 35.5rem;
+        
+         width: 39.5rem;
      }
    
      .container {
-         width: 35.5rem;
+         width: 39.5rem;
          height: 100%;
          
      }
    
      .slider-box {
-         width: 35.5rem;
+         width: 39.5rem;
          height: 100vh;
      }
 
      .slider-box .container { height: 100%;}
 
      .slider-img, .slider-effect {
-         width: 35.5rem;
+         width: 39.5rem;
      }
    
      .slider-content p{ margin: 0px;}
@@ -208,8 +212,8 @@ lg- >1200px
            display: none;
        }
       
-      .box-menu-mobile {
-          display: block;
+      .box-menu-mobile:hover{
+          height: 600px;
           
       }
     
@@ -241,7 +245,7 @@ lg- >1200px
     }
 
     .resume, .service, .resume, .file, .file-card, .img-file, .img-effect, .client, .footer, .file-content {
-        width: 35.5rem;
+        width: 39rem;
     }
 
     .edu-row {
@@ -305,11 +309,12 @@ lg- >1200px
      font-size: 15px;
  }
 
-  .box {
-      height: 75px;
-  }
+ 
 
-
+  .box-menu-mobile:hover .box {
+    height: 600px;
+    
+}
 
 
     .box-menu {
