--- a/responsive.css
+++ b/responsive.css
@@ -242,7 +242,7 @@ lg- >1200px
         margin: 0px;
     }
 
-    .resume, .service, .resume, .file, .file-card, .img-file, .img-effect, .client, .footer, .file-content {
+    .resume, .service, .resume, .file, .file-card, .img-file, .img-effect, .client, .footer, .file-content, .contact {
         width: 39rem;
     }
 
