--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ body{
 
 .slider-img {
     height: 100vh;
-    background-image: url(/project.images/intro-bg.jpg);
+    background-image: url("project.images/intro-bg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
  background-position: center center;
@@ -495,7 +495,7 @@ font-size: medium;
 /* file section style*/
 
 .img-file img{
-background-image: url(/project.images/intro-bg-2.jpg);
+background-image: url("project.images/intro-bg-2.jpg");
 background-size: cover;
 background-repeat: no-repeat;
 position: center center;
