--- a/style.css
+++ b/style.css
@@ -164,11 +164,9 @@ body{
      
  }
 
- 
-
 .slider-img {
     height: 100vh;
-    background-image: url("project.images/intro-bg.jpg");
+    background-image: url("/project.images/intro-bg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
  background-position: center center;
@@ -181,8 +179,6 @@ body{
     position: absolute;
     width: 100%;
 }
-
-
 
 .slider-content {
 display: flex;
@@ -495,7 +491,7 @@ font-size: medium;
 /* file section style*/
 
 .img-file img{
-background-image: url("project.images/intro-bg-2.jpg");
+background-image: url("/project.images/intro-bg-2.jpg");
 background-size: cover;
 background-repeat: no-repeat;
 position: center center;
