--- a/responsive.css
+++ b/responsive.css
@@ -192,6 +192,13 @@ lg- >1200px
          height: 100%;
          
      }
+
+     .box-name span {
+         font-size: 3rem;
+         padding: 20px;
+     }
+
+
    
      .slider-box {
          width: 39rem;
@@ -309,22 +316,43 @@ lg- >1200px
      font-size: 15px;
  }
 
- 
 
-  .box-menu-mobile:hover .box {
-    height: 600px;
+   .box-menu-basis a{
+        
+    color: white;}
+
     
+   .checkbtn {
+    display: block;
 }
 
+ 
+.box-menu-basis {
+ background-color: #2c3e50;
+ width: 33rem;
+ height: 100vh;
+ left: 100%;
+ right: 0;
+ top: 70px;
+ z-index: 9;
+ position: fixed;
+ flex-direction: column;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ transition: all 1s ease;
+ overflow: hidden; 
+}
+ 
 
-    .box-menu {
-        display: none;
-    }
-   
-   .box-menu-mobile {
-       display: block;
-       
-   }
+
+ #check:checked~.box-menu-basis {
+     left: 0%;
+  }
+  #check:checked~.checkbtn i::before{
+      content: "\X";
+  }
+
  
 
  .main-header {
@@ -392,10 +420,13 @@ lg- >1200px
  }
  
 
- .client .container h{
 
- }
+ .resume, .service, .file, .client, .footer, .contact, .about, .portfolio, .faq,  {
+    width: 35rem;
+}
 
-
+.faq-content img{
+    width: 300px;
+}
 
 }
