--- a/style.css
+++ b/style.css
@@ -494,13 +494,13 @@ font-size: medium;
 background-image: url("project.images/intro-bg-2.jpg");
 background-size: cover;
 background-repeat: no-repeat;
-position: center center;
+background-position: center center;
 height: inherit ;
-width: 100%;
+width: 40rem;
 }
 
 .img-effect {
-    width: 100%;
+    width: 38rem;
     background: rgb(0 0 0 / 72%)  ;
     position: absolute;
     height: inherit;
