--- a/style.css
+++ b/style.css
@@ -496,11 +496,11 @@ background-size: cover;
 background-repeat: no-repeat;
 background-position: center center;
 height: inherit ;
-width: 32rem;
+width: 100%
 }
 
 .img-effect {
-    width: 32rem;
+    width: 100%;
     background: rgb(0 0 0 / 72%)  ;
     position: absolute;
     height: inherit;
